test/1.2/errors/T_WDEPRECATED_scope.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

method output() -> (int i) {
    /// WARNING WDEPRECATED
    local int i;
    i = 12;
}


method input(int j) -> (int i) {
    /// WARNING WDEPRECATED
    static int j;
    i = j;
}

method test() -> (bool ok) {
    local int i;
    call $output() -> (i);
    call $input(12) -> (i);
    ok = i == 0;
}
